--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,7 +1,24 @@
-- uses: Platane/snk@v3
-  with:
-    github_user_name: ${{ OmegazonCMoi }}
-    outputs: |
-      dist/github-snake.svg
-      dist/github-snake-dark.svg?palette=github-dark
-      dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+name: Generate Snake Game
+
+on:
+  schedule:
+    - cron: "0 0 * * *"
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Generate Snake Game from GitHub Contribution Grid
+        uses: Platane/snk@v2
+        with:
+          github_user_name: OmegazonCMoi
+          gif_out_path: dist/github-contribution-grid-snake.svg
+      - name: Output snake game
+        uses: actions/upload-artifact@v2
+        with:
+          name: snake-game
+          path: dist/github-contribution-grid-snake.svg
